@@ -14,23 +14,23 @@ public class MapBoardTest {
 
 	@Test
     public void testMapBuilder() {
-        MapBoard.Builder builder = new MapBoard.Builder(4);
+		final var builder = new MapBoard.Builder(4);
         builder.addInteriorRow(" A  ");
         builder.addInteriorRow(" # B");
         builder.addInteriorRow("C  #");
-        MapBoard board = builder.build(positionSupplier);
+		final var board = builder.build(positionSupplier);
         assertEquals(6, board.getWidth());
         assertEquals(4, board.getHeight());
     }
 
 	@Test
     public void testGetAvailableMovesReturnsAllAvailableMoves() {
-        MapBoard.Builder builder = new MapBoard.Builder(4);
+		final var builder = new MapBoard.Builder(4);
         builder.addInteriorRow(" A  ");
         builder.addInteriorRow(" # B");
         builder.addInteriorRow("C  #");
-        MapBoard board = builder.build(positionSupplier);
-        Collection<Move> expectedMoves = Arrays.asList(new Move(2, 0, Left),
+		final var board = builder.build(positionSupplier);
+        Collection<Move> expectedMoves = List.of(new Move(2, 0, Left),
                                                        new Move(2, 0, Right), 
                                                        new Move(4, 1, Left), 
                                                        new Move(1, 2, Right));
@@ -39,44 +39,44 @@ public class MapBoardTest {
 
 	@Test
 	public void testEmptyBoardsWithEqualDimensionsAreEqual() {
-		Map<Position, Block> layout = new HashMap<>();
-		MapBoard firstBoard = new MapBoard(1, 1, layout, positionSupplier);
-		MapBoard secondBoard = new MapBoard(1, 1, layout, positionSupplier);
+		final var layout = new HashMap<Position, Block>();
+		final var firstBoard = new MapBoard(1, 1, layout, positionSupplier);
+		final var secondBoard = new MapBoard(1, 1, layout, positionSupplier);
 		assertEquals(firstBoard, secondBoard);
 	}
 
 	@Test
 	public void testBoardsWithDifferentDimensionsAreUnequal() {
-		Map<Position, Block> layout = new HashMap<>();
-		MapBoard firstBoard = new MapBoard(5, 2, layout, positionSupplier);
-		MapBoard secondBoard = new MapBoard(5, 3, layout, positionSupplier);
+		final var layout = new HashMap<Position, Block>();
+		final var firstBoard = new MapBoard(5, 2, layout, positionSupplier);
+		final var secondBoard = new MapBoard(5, 3, layout, positionSupplier);
 		assertNotEquals(firstBoard, secondBoard);
 	}
 
 	@Test
 	public void testBoardsWithSameDimensionsAndContentsAreEqual() {
-		Map<Position, Block> layout = new HashMap<>();
+		final var layout = new HashMap<Position, Block>();
 		layout.put(new Position(0, 0), Block.wall());
 		layout.put(new Position(1, 2), new Block('A'));
-		MapBoard firstBoard = new MapBoard(4, 4, layout, positionSupplier);
-		MapBoard secondBoard = new MapBoard(4, 4, layout, positionSupplier);
+		final var firstBoard = new MapBoard(4, 4, layout, positionSupplier);
+		final var secondBoard = new MapBoard(4, 4, layout, positionSupplier);
 		assertEquals(firstBoard, secondBoard);
 	}
 
 	@Test
 	public void testGetBlockAt() {
-		Map<Position, Block> layout = new HashMap<>();
-		Block block = Block.wall();
-		Position position = new Position(1, 3);
-		layout.put(position, block);		
-		MapBoard board = new MapBoard(3, 4, layout, positionSupplier);
+		final var layout = new HashMap<Position, Block>();
+		final var block = Block.wall();
+		final var position = new Position(1, 3);
+		layout.put(position, block);
+		final var board = new MapBoard(3, 4, layout, positionSupplier);
 		assertEquals(block, board.getBlockAt(position));
 		assertNull(board.getBlockAt(new Position(0, 1)));
 	}
 
 	@Test
 	public void testApplyMoveWillNotMakeImpossibleMove() {
-		MapBoard board = MapBoard.fromString("#A#", positionSupplier);
+		final var board = MapBoard.fromString("#A#", positionSupplier);
 		
 		try {
 			board.apply(new Move(1, 0, Left));
@@ -93,10 +93,10 @@ public class MapBoardTest {
 
 	@Test
     public void testApplyMoveRecordsMoveInHistory() {
-        String layout = "#A #\n" +
-                        "####";
-        MapBoard board = MapBoard.fromString(layout, positionSupplier);
-        Move move = new Move(1, 0, Right);
+		final var layout = "#A #\n" +
+			               "####";
+		final var board = MapBoard.fromString(layout, positionSupplier);
+		final var move = new Move(1, 0, Right);
         Board newBoard = board.apply(move);
         assertEquals(1, newBoard.getMoveHistory().size());
         assertEquals(Collections.singletonList(move), newBoard.getMoveHistory().getMoves());
@@ -109,12 +109,12 @@ public class MapBoardTest {
 
 	@Test
 	public void testApplyMoveCanMakeMoveWithFalling() {
-		String layoutText = 
+		final var layoutText =
 			"#A #\n" +
 			"## #\n" +
 			"####";
-	
-		String expectedLayoutText = 
+
+		final var expectedLayoutText =
 			"#  #\n" +
 			"##A#\n" +
 			"####";
@@ -124,49 +124,48 @@ public class MapBoardTest {
 
 	@Test
     public void testApplyMoveWithDifferentBlocks() {
-        MapBoard.Builder boardBuilder = new MapBoard.Builder(5);
+		var boardBuilder = new MapBoard.Builder(5);
         boardBuilder.addInteriorRow(" BA  ");
         boardBuilder.addInteriorRow(" ##  ");
         boardBuilder.addInteriorRow(" A  B");
-        MapBoard board = boardBuilder.build(positionSupplier);
-        MapBoard newBoard = board.apply(new Move(3, 0, Right));
+		final var board = boardBuilder.build(positionSupplier);
+		final var newBoard = board.apply(new Move(3, 0, Right));
 
         boardBuilder = new MapBoard.Builder(5);
         boardBuilder.addInteriorRow(" B   ");
         boardBuilder.addInteriorRow(" ##  ");
         boardBuilder.addInteriorRow(" A AB");
-        MapBoard expectedBoard = boardBuilder.build(positionSupplier);
+		final var expectedBoard = boardBuilder.build(positionSupplier);
         
         assertEquals(expectedBoard, newBoard);
     }
 
 	@Test
     public void testMoveHistoryRetainsMoves() {
-        MapBoard.Builder boardBuilder = new MapBoard.Builder(5);
+		final var boardBuilder = new MapBoard.Builder(5);
         boardBuilder.addInteriorRow(" BA  ");
         boardBuilder.addInteriorRow(" ##  ");
         boardBuilder.addInteriorRow(" A  B");
-        MapBoard board = boardBuilder.build(positionSupplier);
-        Move firstMove = new Move(3, 0, Right);
-        MapBoard firstBoard = board.apply(firstMove);
+		final var board = boardBuilder.build(positionSupplier);
+		final var firstMove = new Move(3, 0, Right);
+		final var firstBoard = board.apply(firstMove);
         assertEquals(1, firstBoard.getMoveHistory().size());
         assertEquals(Collections.singletonList(firstMove), firstBoard.getMoveHistory().getMoves());
-        Move secondMove = new Move(2, 0, Left);
-        MapBoard secondBoard = firstBoard.apply(secondMove);
+		final var secondMove = new Move(2, 0, Left);
+		final var secondBoard = firstBoard.apply(secondMove);
         assertEquals(2, secondBoard.getMoveHistory().size());
-        assertEquals(Arrays.asList(firstMove, secondMove), 
-                     secondBoard.getMoveHistory().getMoves());
+        assertEquals(List.of(firstMove, secondMove), secondBoard.getMoveHistory().getMoves());
     }
 
 	@Test
 	public void testApplyMoveWithVanishingBlocks() {
-		String layoutText = 
+		final var layoutText =
 			"#B   #\n" +
 			"#C   #\n" +
 			"##   #\n" +
 			"# C  #\n" +
 			"######";
-		String expectedLayoutText = 
+		final var expectedLayoutText =
 			"#    #\n" +
 			"#B   #\n" +
 			"##   #\n" +
@@ -178,11 +177,11 @@ public class MapBoardTest {
 
 	@Test
 	public void testFromString() {
-		String builder = "#...#\n" +
-						 "#.C.#\n" +
-						 "#ABC#\n" +
-						 "#####";
-		MapBoard boardFromString = MapBoard.fromString(builder, positionSupplier);
+		final var builder = "#...#\n" +
+			                "#.C.#\n" +
+					        "#ABC#\n" +
+					        "#####";
+		final var boardFromString = MapBoard.fromString(builder, positionSupplier);
 		
 		Map<Position, Block> layout = new HashMap<>();
 		layout.put(new Position(0, 0), Block.wall());
@@ -200,8 +199,8 @@ public class MapBoardTest {
 		layout.put(new Position(2, 2), new Block('B'));
 		layout.put(new Position(1, 2), new Block('A'));
 		layout.put(new Position(3, 2), new Block('C'));
-		
-		MapBoard expectedBoard = new MapBoard(5, 4, layout, positionSupplier);
+
+		final var expectedBoard = new MapBoard(5, 4, layout, positionSupplier);
 		assertEquals(expectedBoard, boardFromString);
 	}
 
@@ -212,7 +211,7 @@ public class MapBoardTest {
 	}
 	
 	private void assertMoveResult(String initialLayout, String expectedLayout, Move move) {
-		MapBoard board = MapBoard.fromString(initialLayout, positionSupplier);
+		final var board = MapBoard.fromString(initialLayout, positionSupplier);
 		assertEquals(MapBoard.fromString(expectedLayout, positionSupplier), board.apply(move));
 	}
 }
